remove example posts and add information about myself

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,11 +1,5 @@
 ---
-import {
-  BASE,
-  MANUAL_DARK_MODE,
-  SEARCH_ENABLED,
-  SITE_FAVICON,
-  SITE_NAME,
-} from "../config.json";
+import { BASE, MANUAL_DARK_MODE, SEARCH_ENABLED, SITE_FAVICON, SITE_NAME } from "../config.json";
 import ThemeToggle from "./ThemeToggle.astro";
 import HeaderLink from "./HeaderLink.astro";
 import CodeCopyButton from "./CodeCopyButton.astro";
@@ -17,10 +11,7 @@ const { active } = Astro.props;
 ---
 
 <header>
-  <nav
-    class="flex items-center justify-between p-6 lg:px-8"
-    aria-label="Global"
-  >
+  <nav class="flex items-center justify-between p-6 lg:px-8" aria-label="Global">
     <div class="flex lg:flex-1">
       <a href={BASE + "/"} class="p-1.5">
         <span class="sr-only">go to home</span>
@@ -29,23 +20,13 @@ const { active } = Astro.props;
           <div class="size-8 bg-base-200 dark:bg-base-100 rounded-full flex items-center justify-center">
             {SITE_FAVICON}
           </div>
-          <span
-            class="hidden md:block font-bold text-base text-base-950 dark:text-base-50"
-            >{SITE_NAME}</span
-          >
+          <span class="hidden md:block font-bold text-base text-base-950 dark:text-base-50">{SITE_NAME}</span>
         </div>
       </a>
     </div>
     <div class="flex gap-x-10">
-      <HeaderLink
-        href={BASE + "/"}
-        active={active === "blog"}
-        class="text-sm font-semibold leading-6">Blog</HeaderLink
-      >
-      <HeaderLink
-        href={BASE + "/about"}
-        active={active === "about"}
-        class="text-sm font-semibold leading-6">About</HeaderLink
+      <HeaderLink href={BASE + "/"} active={active === "blog"} class="text-sm font-semibold leading-6"
+        >Blog (coming soon)</HeaderLink
       >
 
       {MANUAL_DARK_MODE ? <ThemeToggle /> : null}
