--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,8 @@
 import { POSTS_PER_PAGE } from "../config.json";
 import { getBlogPosts } from "src/utils";
 import PostList from "$layouts/PostList.astro";
+import BlogPost from "$layouts/BlogPost.astro";
+import { Content } from "$content/info/about.mdx";
 
 const posts = (await getBlogPosts()).splice(0, POSTS_PER_PAGE);
 
@@ -9,5 +11,10 @@ const total = Math.ceil((await getBlogPosts()).length / POSTS_PER_PAGE);
 ---
 
 <PostList {posts} totalPages={total} currentPage={1} showFeatured>
-  <h1>Latest blog posts</h1>
+  <main class="max-w-2xl lg:max-w-3xl mx-auto mt-8 px-4">
+    <BlogPost>
+      <Content />
+    </BlogPost>
+  </main>
+  {total > 0 && <h1>Latest blog posts</h1>}
 </PostList>
